k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordle-service
spec:
  selector:
    app: wordle
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
